Tinh luong cho nhan vien

--- a/DemoMVC/Views/Person/Giaiptb2.cshtml
+++ b/DemoMVC/Views/Person/Giaiptb2.cshtml
@@ -1,4 +1,4 @@
-<form class="w3-container w3-card-4 w3-light-grey" asp-action="Giaiptb2">
+<form asp-action="Giaiptb2">
     <label>Nhap he so A: </label>
     <input type="text" name="hesoA">
     <br>
