Tao khoa ngoai cho Student

--- a/DemoMVC/Views/Student/Delete.cshtml
+++ b/DemoMVC/Views/Student/Delete.cshtml
@@ -16,8 +16,8 @@
     </dl>
 
     <form asp-action="Delete">
-        <input type="hiden" asp-for="StudentID"/>          
-        <input type="submit" value="Delete" class="btn btn-primary"/>
+        <input type="hidden" asp-for="StudentID"/>          
+        <input type="submit" value="Delete" class="btn btn-danger"/>
         <a class="btn btn-success" asp-action="Index">Danh sách sinh viên</a>
     </form>
 </div>
