--- a/DemoMVC/Views/Person/Index.cshtml
+++ b/DemoMVC/Views/Person/Index.cshtml
@@ -1,7 +1,23 @@
-<h1>Đây là index của Person</h1>
-<form asp-action="Index">
-    <label> Nhập Tên </label>
-    <input type="text" name="FullName">
-    <input type="submit" value="Send">
-</form>
-<h1>@ViewBag.thongbao</h1>
+@model IEnumerable<DemoMVC.Models.Person>
+<p>
+    <a class="btn btn-success" asp-action="Create">Create a new Person</a>
+</p>
+<table class="table table-all">
+    <tr>
+        <th>Person ID</th>
+        <th>Person Name</th>
+        <th></th>
+    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@Html.DisplayFor(m => item.PersonID)</td>
+            <td>@Html.DisplayFor(m => item.PersonName)</td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.PersonID">Sửa</a>|
+                <a asp-action="Delete" asp-route-id="@item.PersonID">Xóa</a>
+
+            </td>
+        </tr>
+    }
+</table>
