--- a/DemoMVC/Views/Student/Create.cshtml
+++ b/DemoMVC/Views/Student/Create.cshtml
@@ -15,6 +15,15 @@
                 <input asp-for="StudentName" class="form-control">
                 <span asp-validation-for="StudentName" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Address" class="control-label"></label>
+                <input asp-for="Address" class="form-control">
+                <span asp-validation-for="Address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FacultyID" class="control-label"></label>
+                <select asp-for="FacultyID" class="form-control" asp-items="ViewBag.FacultyID"></select>
+            </div>
             <br>
             <div class="form-group">
                 <input class="btn btn-primary" type="submit" value="Save">
